# distributed-detection

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  run.sh
scripts/: sim_detection_center.py
src/: center.py  central.py  detector.py  location.py  target.py
src/utils/: debug.py
