[project]
name = "distributed-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Mehmet Aktas",email = "mfatihaktas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "simpy (>=4.1.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
